# project-practicle

android/: README
android/Card_Layout_2/: settings.gradle.kts
android/Card_Layout_2/app/: build.gradle.kts
android/DiceRoller/app/: build.gradle.kts
android/first_application/app/: build.gradle
android/plus_Layout_1/: settings.gradle.kts
android/plus_Layout_1/app/: build.gradle.kts
dart-practicle/dart_introduction/: README.md  pubspec.yaml
dart-practicle/dart_introduction/lib/: class.dart  class_methods.dart  collections.dart  generic.dart  records.dart  variables.dart
dart-practicle/dart_introduction/test/: dart_introduction_test.dart
docker/: README  qwerty.sdl
docx-practicle/: README  document.xml  new_докумнт.docx  докумнт для анализа.docx  докумнт с измененой картинкой.docx  докумнт.docx
docx-practicle/new word/: document-форматирован.xml  document.xml
docx-practicle/new word/_rels/: document-форматирование.xml.rels  document.xml.rels
docx-practicle/word/: document-форматирован.xml  document.xml
flutter-practicle/: README
flutter-practicle/fetch/: pubspec.yaml
flutter-practicle/firebase/: pubspec.yaml
flutter-practicle/graphql/: README
flutter-practicle/navigation/: .metadata  pubspec.yaml
graphql/client/: index.html  main.js
graphql/server/: index.js  package-lock.json  package.json
qml/Flickable/: CMakeLists.txt  main.qml
qml/table-view/: CMakeLists.txt  lines.cpp  lines.h  main.cpp  main.qml  tablemodel.h
qt/docx/xml/: CMakeLists.txt  docxxml.cpp  docxxml.h  main.cpp
regexp/: regexp.txt
vs code/: README
(+47 files in other folders)
